<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonTapiocaLauncher"
        style="?buttonPrimary"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToTapiocaLauncher"
        android:text="@string/button_tapioca_launcher"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/buttonTiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMaze" />

    <Button
        android:id="@+id/buttonMaze"
        style="?buttonPrimary"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToMazeGame"
        android:text="@string/button_maze"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/buttonTapiocaLauncher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonTiles"
        style="?buttonPrimary"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="180dp"
        android:onClick="goToTilesGame"
        android:text="@string/button_tiles"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTapiocaLauncher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="75dp"
        android:text="@string/select_game"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="16pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonMaze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeMyLang"
        style="?buttonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/changeLang"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/changeMyTheme"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeMyTheme"
        style="?buttonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="showChangeThemeDialog"
        android:text="@string/change_theme"
        android:textColor="?android:attr/colorAccent"
        app:layout_constraintBaseline_toBaselineOf="@+id/changeMyLang"
        app:layout_constraintStart_toEndOf="@+id/changeMyLang" />

</androidx.constraintlayout.widget.ConstraintLayout>