<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/title_tiles"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="24pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlayTiles"
        style="?buttonPrimary"
        android:layout_width="129dp"
        android:layout_height="59dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="20dp"
        android:onClick="startTilesGame"
        android:text="@string/buttonPlay"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonExitTiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTiles" />

    <Button
        android:id="@+id/buttonExitTiles"
        style="?buttonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:onClick="exitTilesGame"
        android:text="@string/button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayTiles" />

</androidx.constraintlayout.widget.ConstraintLayout>